<resources>
    <string name="app_name">MyStats - University</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="fulltime">Full time courses</string>
    <string name="parttime">Part time courses</string>
    <string name="satisfaction_title">How satisfied previous students have been with the course can be a good indication of what your experience will be like on the course. Click the sections below to see the percentage were satisfied with the enclosed statements</string>
    <string name="course_name_pervasive">course name :</string>
    <string name="university_name_pervasive">university name : </string>
    <string name="about_button">about</string>
    <string name="ucas_tip_button">ucas tips</string>
    <string name="quick_search_button">search</string>
    <string name="recent_search_button">recent \n search</string>
    <string name="radius_button">Button</string>
    <string name="full_time">full time</string>
    <string name="part_time">part time</string>
    <string name="course_name_entered">Subject or Course</string>
    <string name="radius_text">within 0 km of </string>
    <string name="location_name_entered">Location or institution</string>
    <string name="search_Button">Search</string>
    <string name="search_results_header">Search Results</string>
    <string name="cost_text_id">Money matters, especially when you\'re a student,  below you\'ll find the living cost statistics according to NUS for the average UK student and the average cost for accommodation.</string>
    <string name="insurance_id">£42 for insurance</string>
    <string name="personal_id">£2,074 for personal goods</string>
    <string name="food_id">£1,956 for food</string>
    <string name="leisure_id">£1,310 for leisure time</string>
    <string name="travel_id">£1,524 for travel expenses</string>
    <string name="esChartTitle1">Percent employed six months after completing the course</string>
    <string name="average_salary_title">Average salaries</string>
    <string name="monthly_breakdown_title">Breakdown of average monthly wages</string>
    <string name="entry_info_introduction">Everyone needs to know how many UCAS points they need to get into their favourite Uni, Below you will see a chart that shows the spread of what last years students had when they started this course</string>
    <string name="entry_info_xaxis">Amount of UCAS Points</string>
    <string name="entry_info_yaxis">Percentage of people</string>
    <string name="error_text">No Stats Found...</string>
    <string name="edit_text_dialog_user_input">Quick Search</string>
    <string name="siChartTitle1">Degree classifications students achieved</string>
    <string name="siChartTitle2">What students are doing a year after the course</string>
    <string name="label">Title</string>
    <string name="item_title">TITLE</string>
    <string name="no_course_found_title">No courses found!</string>
    <string name="sat_title">Satisfaction</string>
    <string name="satisfaction_name">Sat Name</string>
    <string name="mode">Study mode :</string>
    <string name="overall_satisafaction">overall sat bla bla</string>
    <string name="salary_after_6">salary after 6 months</string>
    <string name="percent_that_go_to_work">percent that go to work</string>
    <string name="more_stats_button">More stats</string>
    <string name="course_name">COURSE SEARCH RESULTS</string>
    <string name="university_name">ExpandableLayout Header!</string>
    <string name="tip_description">Study mode :</string>
    <string name="about_page_intro">So you want to know more about the app, great!\n\nThe application was developed with the intention to give everyone a quick and simple way to research university courses across the UK.\n\nIf you’re a prospective under/postgraduate then this app will help you find interesting stats to help you choose the course for you.</string>
    <string name="meet_the_team_intro">The team first met as they all attended Teesside University. This page tells everyone a little about each person who contributed to the making of this app.</string>
    <string name="chris_personal">This is Chris, a 27 year old meditating pescatarian, previously in business in the renewable sector;  Chris realised his true calling was in programming and problem solving after he built a SAP calculator making income predictions based on post code solar radiation levels.  Chris is studying Computer Science and aims to continue his education to Msc with interests in Machine Learning.</string>
    <string name="tel_personal">This is Terry, after working in McDonalds until the age of 23 he decided it was time to pursue his dream of computer coding. In his spare time Terry enjoys playing pool. Terry is about to start a placement at Sabisu. Terry aspires to work as a software developer once he finishes his degree course.</string>
    <string name="dan_personal">This is Daniel, 26, from Stockton on Tees. Daniel is currently in his third year of a five-year degree studying BSc Computing (with foundation and placement year). Daniel is due to start a placement with Nissan this June. Daniel previously served 9 years with the Army Reserves and deployed to Afghanistan in 2012 and 2014 before deciding on a career change. Daniel aspires to become a software developer for a large organisation such as Nissan. </string>
    <string name="jack_personal">This is Jack, he is currently 21 and from Darlington. Jack is currently studying for his bachelor’s degree in computer science at Teeside university. Next year he is due to embark on a work placement at redev development in Leeds. This will be his first time working in the industry and is an exciting opportunity. This opportunity should help him reach his long-term career goal of joining the software industry as a software engineer.</string>
    <string name="firebase">Firebase - is a Google based Cloud Storage that lets us upload and share content. By using Firebase it allows us to reduce the size of app and still have the data available when requested through the app. We will collect the apps metadata from you such as searches. For further information goto - <a href="https://firebase.google.com/docs/storage/"><u>Firebase</u></a></string>
    <string name="data_intro">This is the intriguing part on how the data is used and collected. The app makes the most of services and data provided by: \n\n\u2022\t\tFirebase\n\u2022\t\tHigher Education Statistics Agency\n\u2022\t\tNational Student Survery\n\u2022\t\tDestinations of Leavers from Higher Education Survey.\n</string>
    <string name="hesa">HESA - Receives information from universities across the UK and collates it into useful information about universities and their courses. For further information goto - <a href="http//www.hesa.ac.uk"><u>HESA</u></a></string>
    <string name="national_student_survey">NSS - We also use data from the National Student Survey to collect satisfaction information about the different courses from the students, this is done by Ipsos MORI. This information is collected through a questionnaires. For more information please visit the NSS website at <a href="http://www.thestudentsurvey.com"><u>Student Survey</u></a></string>
    <string name="dlfh">DLFH - is used to find the information about people who have recently left university. The DLHE asks the leavers of courses what they are doing roughly 6 months after the course. For further information goto - <a href="http://www.hefce.ac.uk/pubs/year/2013/201301/"><u>HEFCE</u></a></string>
    <string name="copy_page_intro">Here you can find the legal information about the data used in the MyStats - University app</string>
    <string name="copy_unistats_disclaimer">MyStats - University is in no way affiliated with the UniStats website. The app uses and supplies informative stats that is in no way in conjunction with UniStats.</string>
    <string name="copy_hesa_disclaimer">All the information provided has been taken from the HESA database. The data has been published under the Creative Commons Attribution 4.0 International Licence. In short, this mean the app can use and adapt content for personal and commercial use as long as appropriate credit is provided. HESA is not responsible for any the conclusions or way the data is represented on this app and is not responsible for any content on this app.</string>
    <string name="copy_further_information">If you require any further information or have any questions relating to this app feel free to contact the development team, CDJiT via email.</string>
    <string name="copy_image_info">The images used in this app have been taken from Freepik and Logomakr which are both open source resources</string>
    <string name="freepik_image">\u2022\t\t<a href="http://www.freepik.com/"><u>Freepik</u></a></string>
    <string name="emailStr">\u2022\t\t<a href="mailto:cdjit_development@gmail.com"><u>cdjit_development@gmail.com</u></a></string>
    <string name="logomakr_image">\u2022\t\t<a href="http://www.logomakr.com/"><u>Logomakr</u></a></string>
    <string name="ucas_tips_intro">Applying for University can seem a daunting task, so here at MyStats the team have put together some tips and hints to help you in your university application journey.</string>
    <string name="ucas_tips_choosing_course_intro">The choice of course is a key decision in anyone’s life with over 37000 courses offered across 350 different universities it can be overwhelming. Below are some tips that will help you choose the right course for you.</string>
    <string name="ucas_tips_hobby_title">Consider Your Enjoyment</string>
    <string name="ucas_tips_hobby">Research shows that intrinsically motivating work makes people a lot happier than a big pay cheque so why not pursue a course in the thing you do for fun, your hobby. Whether that’s computer games, gardening, crafts or cooking its worth exploring courses that incorporate your passion rather than concentrating on earning potential alone.  </string>
    <string name="ucas_tips_entry_requirments">Students often make the mistake of being overly pessimistic or optimistic with their grade expectations, the best way to counter this pitfall is to select courses with a range of entry requirements both high and low to negate the risk of upset come results day. </string>
    <string name="ucas_tips_entry_requirments_title">Apply To A Range</string>
    <string name="ucas_tips_location">The choice of location is as important as the course itself, this largely depends on individual circumstances.</string>
    <string name="ucas_tips_location_title">Think About Location</string>
    <string name="ucas_tips_goals_title">Consider Your Career Goals</string>
    <string name="ucas_tips_goals">Choose a course which will help you achieve your long term career goal. There is no point in studying a subject which wont help you get where you want to be after graduating</string>
    <string name="ucas_tips_research_title">Do your research</string>
    <string name="ucas_tips_research">Save yourself unnecessary hard work by checking out what employment stats are like after graduating. It\'s also worth looking at the kind of careers that will be open to you when you are finished. </string>
    <string name="ucas_tips_talk_title">Talk to people</string>
    <string name="ucas_tips_talk">If the facts and figures arent enough try get in touch with some of the institutions alumni most institutions will hand over contact details if you ask. This helps build a fuller picture of what life there would be like not just the academic side of things!</string>
    <string name="ucas_tips_personal_statement_intro">If you are applying for a course through UCAS you are going to have to write a personal Statement. So, to get you started and give you guidance here is some advice to help you.</string>
    <string name="ucas_tips_opening_paragraph_title">Your Opening Paragraph</string>
</resources>