<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
            style="@style/text_view_center"
                android:lineSpacingExtra="8dp"
                android:textSize="17dp"
                android:padding="15dp"
                android:textColor="#3B322C"
                android:id="@+id/data_intro"
            android:text="@string/data_intro"/>



            <TextView
                style="@style/text_view_right"
                android:lineSpacingExtra="8dp"
                android:textSize="17dp"
                android:padding="15dp"
                android:textColor="#3B322C"
                android:id="@+id/hefa"
                android:layout_below="@+id/data_intro"
                android:drawableLeft="@drawable/hesa_picture"
                android:text="@string/hesa"/>

            <TextView
                style="@style/text_view_left"
                android:lineSpacingExtra="8dp"
                android:textSize="17dp"
                android:padding="15dp"
                android:textColor="#3B322C"
                android:layout_below="@+id/hefa"
                android:id="@+id/nss"
                android:drawableRight="@drawable/nss_logo"
                android:text="@string/national_student_survey"/>


            <TextView
                style="@style/text_view_right"
                android:lineSpacingExtra="8dp"
                android:textSize="17dp"
                android:padding="15dp"
                android:textColor="#3B322C"
                android:layout_below="@+id/nss"
                android:background="@color/greenSheen"
                android:id="@+id/dlhe"
                android:drawableLeft="@drawable/dhle_logo"
                android:text="@string/dlfh"/>



        </RelativeLayout>
    </ScrollView>
</LinearLayout>